CSS fixes on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ button {
 }
 
 .hero h2 {
-    padding: 12px 0 0 0;
+    padding: 0.813em 0 0 0;
     color: rgba(16, 16, 16, 0.6);
     width: 100%;
     line-height: 1.5;
@@ -707,7 +707,7 @@ button {
 #thoughts ol /*, .section ol*/ {
     list-style-type: decimal-leading-zero;
     list-style-position: inside;
-    padding: 3em 0;
+    margin: 3em 0;
     color: rgba(16, 16, 16, 0.6);
 }
 
@@ -1069,20 +1069,20 @@ button.mdi {
 
 @media screen and (max-width: 48em) {
     #work.wrapper, #about.wrapper {
-        padding: 2em;
+        padding: 0 2em;
     }
     #thoughts ol {
-        padding: 2em 2em 3em 2em;
+        padding: 0 2em;
     }
     .section {
         padding: 0 2em;
     }
-    .block:first-of-type {
+    /* .block:first-of-type {
         margin-top: 0;
-    }
-    .block:last-of-type {
+    } */
+    /* .block:last-of-type {
         margin-bottom: 1em;
-    }
+    } */
 }
 
 @media screen and (max-width: 37.5em) {
@@ -1097,6 +1097,13 @@ button.mdi {
         text-align: center;
         margin-bottom: 18px;
         /* animation-duration: 0.4s !important; */
+    }
+    nav a:hover, nav a:active, nav a:focus {
+        border: 1px solid rgba(0, 0, 0, 0.2);
+        border-radius: 20px;
+    }
+    nav a {
+        border: 1px solid transparent;
     }
     nav a, nav a:last-child {
         padding: 6px 12px;
@@ -1122,10 +1129,10 @@ button.mdi {
         margin: 2em 2em 3em 2em;
     }
     .hero h1 {
-        font-size: 1.750em;
+        font-size: 1.5em;
     }
     .hero h2 {
-        line-height: 1.3;
+        font-size: 0.875em;
     }
     #work .title {
         -webkit-flex: auto;
